--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ SMTP_FROM_EMAIL="Suzao.in <no-reply@example.com>"
 
 INSTAGRAM_CLIENT_ID=628669500158924
 INSTAGRAM_CLIENT_SECRET=0220f051e1122ba64fa2f7b1141dba16
-REDIRECT_URI=https://happy-hairs-design.loca.lt/api/instagram/callback
-FRONTEND_URL=http://localhost:5173
+REDIRECT_URI=https://backend-boom.onrender.com/api/instagram/callback
+FRONTEND_URL=https://frontend-lapz.onrender.com
