--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ SMTP_PORT=587
 SMTP_SECURE=false  
 SMTP_USER=help.fluno@gmail.com
 SMTP_PASS=klmeeqsnnvbgudsn
-SMTP_FROM_EMAIL="Suzao.in <no-reply@example.com>"
+SMTP_FROM_EMAIL="Localyse.in <no-reply@example.com>"
 
 INSTAGRAM_CLIENT_ID=628669500158924
 INSTAGRAM_CLIENT_SECRET=0220f051e1122ba64fa2f7b1141dba16
